--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -3,12 +3,14 @@ layout: post
 title: "Eventos Tecnologia"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Eventos]
-tags: [Eventos]
+categories: [Eventos, Tecnologia]
+tags: [Eventos, Tecnologia]
 ---
+
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2023/11 - DevOpsDays Floripa](https://devopsdays.org/events/2023-florianopolis/program)
 
 - <i class="fa-solid fa-link"></i> [2023/11 - Proud Tech by softplan](https://www.proudtech.com.br/)
 
