--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -3,8 +3,8 @@ layout: post
 title: "Voluntariado no Projeto de Mentoria 3.0 do Canal da Cloud"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Mentoria]
-tags: [Mentoria]
+categories: [Voluntariado, Mentoria]
+tags: [Voluntariado, Mentoria]
 ---
 *Ago 2023 - Presente | 4 meses*
 
@@ -16,4 +16,5 @@ Acredito firmemente que o acesso à educação e orientação é fundamental par
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
 
+- <i class="fab fa-youtube"></i> [DEVOPS | EP 10 | CI/CD com Azure DevOps ou GitHub Actions](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s&ab_channel=UnicastCloudLab)
 - <i class="fab fa-youtube"></i> [Listão dos Aprovados Mentoria 3.0](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s&ab_channel=CanaldaCloud)
