--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -10,6 +10,8 @@ tags: [Eventos, Tecnologia]
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2023/11 - 3º Meetup - Comunidade API Floripa](https://www.sympla.com.br/evento/3-meetup-comunidade-api-floripa/2220166?referrer=t.co)
+
 - <i class="fa-solid fa-link"></i> [2023/11 - DevOpsDays Floripa](https://devopsdays.org/events/2023-florianopolis/program)
 
 - <i class="fa-solid fa-link"></i> [2023/11 - Proud Tech by softplan](https://www.proudtech.com.br/)
