--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -16,7 +16,7 @@ Acredito firmemente que o acesso à educação e orientação é fundamental par
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
 
-- <i class="fab fa-youtube"></i> [DEVOPS EP 11 Monitoramento e Observabilidade](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
+- <i class="fab fa-youtube"></i> [DEVOPS - EP 11 - Monitoramento e Observabilidade](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
 
-- <i class="fab fa-youtube"></i> [DEVOPS EP 10 CI/CD com Azure DevOps ou GitHub Actions](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s&ab_channel=UnicastCloudLab)
+- <i class="fab fa-youtube"></i> [DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s&ab_channel=UnicastCloudLab)
 - <i class="fab fa-youtube"></i> [Listão dos Aprovados Mentoria 3.0](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s&ab_channel=CanaldaCloud)
