--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -10,6 +10,8 @@ tags: [Eventos, Tecnologia]
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2023/11 - 14º Meetup DevOps Floripa](https://www.meetup.com/devops-florianopolis/events/297529400/)
+
 - <i class="fa-solid fa-link"></i> [2023/11 - Code Island Summit 2023](https://summit.codeisland.com.br/?_gl=1%2A137a3lz%2A_ga%2AMTA0ODg4NjgwNy4xNjk5ODkzOTYx%2A_ga_XYNHZBCPDB%2AMTcwMTExMTAzMy40LjAuMTcwMTExMTAzMy4wLjAuMA..%2A_ga_YGC76HLJRP%2AMTcwMTExMTAzMy40LjAuMTcwMTExMTAzMy4wLjAuMA..&_ga=2.233975638.994001474.1701111034-1048886807.1699893961)
 
 - <i class="fa-solid fa-link"></i> [2023/11 - 3º Meetup - Comunidade API Floripa](https://www.sympla.com.br/evento/3-meetup-comunidade-api-floripa/2220166?referrer=t.co)
