--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -20,4 +20,8 @@ Se você estiver interessado em saber mais sobre este projeto ou gostaria de se 
 
 - <i class="fab fa-youtube"></i> [DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s&ab_channel=UnicastCloudLab)
 
+- <i class="fab fa-youtube"></i> [DEVOPS | EP 9 | Introdução a CI/CD (Pipelines, Jenkins)](https://www.youtube.com/watch?v=42-PW3dVF-Q&t=1s&ab_channel=UnicastCloudLab)
+
+- <i class="fab fa-youtube"></i> [DEVOPS | EP 8 | Aprofundando em IaC (Ansible)](https://www.youtube.com/watch?v=ObjlLPkrf1I&ab_channel=UnicastCloudLab)
+
 - <i class="fab fa-youtube"></i> [Listão dos Aprovados Mentoria 3.0](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s&ab_channel=CanaldaCloud)
