--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -10,6 +10,10 @@ tags: [Eventos, Tecnologia]
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2023/12 - LINUXtips Meetup Empowered by Oracle](https://www.youtube.com/live/RaMHnD3Ico4?app=desktop&si=s05HvlLHANQYv6bV)
+
+- <i class="fa-solid fa-link"></i> [2023/12 - Cloud Futures By Magalu Cloud](https://cloudfutures.tech/)
+
 - <i class="fa-solid fa-link"></i> [2023/11 - 14º Meetup DevOps Floripa](https://www.meetup.com/devops-florianopolis/events/297529400/)
 
 - <i class="fa-solid fa-link"></i> [2023/11 - Code Island Summit 2023](https://summit.codeisland.com.br/?_gl=1%2A137a3lz%2A_ga%2AMTA0ODg4NjgwNy4xNjk5ODkzOTYx%2A_ga_XYNHZBCPDB%2AMTcwMTExMTAzMy40LjAuMTcwMTExMTAzMy4wLjAuMA..%2A_ga_YGC76HLJRP%2AMTcwMTExMTAzMy40LjAuMTcwMTExMTAzMy4wLjAuMA..&_ga=2.233975638.994001474.1701111034-1048886807.1699893961)
