--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -10,6 +10,10 @@ tags: [Eventos, Tecnologia]
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2024/02 - 2º Cloud Native Floripa Meetup](https://community.cncf.io/events/details/cncf-cloud-native-floripa-presents-2o-cloud-native-floripa-meetup/)
+
+- <i class="fa-solid fa-link"></i> [2024/02 - Floripa - Meetup Codecon - #01](https://eventos.codecon.dev/meetup-codecon-floripa-01/)
+
 - <i class="fa-solid fa-link"></i> [2023/12 - LINUXtips Meetup Empowered by Oracle](https://www.youtube.com/live/RaMHnD3Ico4?app=desktop&si=s05HvlLHANQYv6bV)
 
 - <i class="fa-solid fa-link"></i> [2023/12 - Cloud Futures By Magalu Cloud](https://cloudfutures.tech/)
@@ -26,7 +30,7 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 
 - <i class="fa-solid fa-link"></i> [2023/10 - Codecon < Feature >](https://www.codecon.dev/feature)
 
--  <i class="fa-solid fa-link"></i> [2023/10 - Cloud Native Floripa ](https://community.cncf.io/cloud-native-floripa/)
+-  <i class="fa-solid fa-link"></i> [2023/10 - 1º Cloud Native Floripa](https://community.cncf.io/events/details/cncf-cloud-native-floripa-presents-1o-cloud-native-floripa/)
 
 -  <i class="fa-solid fa-link"></i> [2023/09 - Tech Connection Florianópolis - TalkFloripa ](https://talkfloripa.com.br/tech-connection-fln)
 
