--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -6,7 +6,7 @@ author: rafaferreira011
 categories: [Voluntariado, Mentoria]
 tags: [Voluntariado, Mentoria]
 ---
-*Ago 2023 - Presente - 4 meses*
+*Ago 2023 - Dez 2023*
 
 Estou empolgado para compartilhar minha expetriência como voluntário no Projeto de Mentoria de Carreira do Canal da Cloud. Esta iniciativa, impulsionada pela paixão pela tecnologia, reúne a comunidade técnica de TI para apoiar indivíduos que desejam avançar em suas carreiras na indúsria de tecnologia.
 
@@ -15,6 +15,8 @@ Como mentor neste projeto, estou dedicado a ajudar pessoas a traçarem caminhos 
 Acredito firmemente que o acesso à educação e orientação é fundamental para que todos prosperem no cenário tecnológico em constante evolução de hoje. Ao fazer parte do Projeto de Mentoria de Carreira do Cloud Channel, tenho o privilégio de ir além do meu papel profissional e causar um impacto significativo na vida de pessoas que aspiram se destacar no mundo da tecnologia.
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
+
+- <i class="fa-solid fa-link"></i> **Saiba mais:** [Post Linkedin Mentor](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
 
 - <i class="fab fa-youtube"></i> [DEVOPS - EP 11 - Monitoramento e Observabilidade](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
 
