--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -9,6 +9,8 @@ tags: [Eventos, Tecnologia]
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
 
+- <i class="fa-solid fa-link"></i> [2024/03 - 1o Meetup 2024 - Infosec Floripa](https://www.eventbrite.com/e/1o-meetup-2024-infosec-floripa-tickets-860860014477)
+
 - <i class="fa-solid fa-link"></i> [2024/03 - Florianópolis - Meetup Codecon - #02](https://eventos.codecon.dev/meetup-codecon-fln-02/)
 
 - <i class="fa-solid fa-link"></i> [2024/02 - KCD Brasil, São Paulo 2024](https://community.cncf.io/events/details/cncf-kcd-brasil-presents-kcd-brasil-sao-paulo-2024/)
