--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -3,8 +3,8 @@ layout: post
 title: "Youtube"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Youtube, Canais]
-tags: [Youtube, Canais]
+categories: [Canais, Youtube]
+tags: [Canais, Youtube]
 ---
 
 Neste blog post, compartilho minha jornada nas plataforma YouTube pelos os canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
