--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -10,6 +10,7 @@ tags: [Canais, Spotify]
 Neste blog post, compartilho minha jornada na plataforma Spotify pelo Podcast e LowOpsCast. Através desse Podcast, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
 
 ![LowOpsCast](/assets/img/posts/LowOpsCast.png)
+![LowOpsCast](/assets/img/posts/LowOpsCast2.png)
 <i class="fa-brands fa-spotify"></i> [LowOpsCast](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
 
 - <i class="fa-brands fa-spotify"></i> [[AUDIO] #01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://open.spotify.com/episode/4TYC8bsfDSr4hGbOiKQdL8?si=1f892294af3640e4)
