--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -12,6 +12,8 @@ Neste blog post, compartilho minha jornada nas plataforma YouTube pelos os canai
 ![LowOps Channel](/assets/img/posts/lowops.png)
 <i class="fab fa-youtube"></i> [LowOps Channel](https://www.youtube.com/@LowOps-Channel)
 
+- <i class="fab fa-youtube"></i> [#02 Episódio com Fabricio Veronez](https://www.youtube.com/watch?v=F-dfaVg5Ix8)
+
 - <i class="fab fa-youtube"></i> [#01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://www.youtube.com/watch?v=snISTHSQvVc&t=1s)
 
 - <i class="fab fa-youtube"></i> [#00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://www.youtube.com/watch?v=nlEQ_UMyKew)
