--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -21,7 +21,7 @@ Neste blog post, compartilho minha jornada nas plataforma YouTube pelos os canai
 ![Azure Floripa](/assets/img/posts/azurefloripa.png)
 <i class="fab fa-youtube"></i> [Azure Foripa](https://www.youtube.com/@AzureFloripa)
 
-- <i class="fab fa-youtube"></i> [Mesa Redonda | Transição de carreira é possível? + Carreira de TI, além da área técnica](https://www.youtube.com/watch?v=6drxvyPhmMc)
+- <i class="fab fa-youtube"></i> [Mesa Redonda - Transição de carreira é possível? + Carreira de TI, além da área técnica](https://www.youtube.com/watch?v=6drxvyPhmMc)
 
 - <i class="fab fa-youtube"></i> [A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot](https://www.youtube.com/watch?v=X3EV4zdh8BA)
 
