--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -7,29 +7,41 @@ categories: [Canais, Youtube]
 tags: [Canais, Youtube]
 ---
 
-Neste blog post, compartilho minha jornada nas plataforma YouTube pelos os canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
+Nesta seção do blog, compartilho minha jornada nas plataforma YouTube pelos os canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
 
-![LowOps Channel](/assets/img/posts/lowops.png)
-<i class="fab fa-youtube"></i> [LowOps Channel](https://www.youtube.com/@LowOps-Channel)
+# LowOps Channel
 
-- <i class="fab fa-youtube"></i> [#02 Episódio com Fabricio Veronez](https://www.youtube.com/watch?v=F-dfaVg5Ix8)
+[![LowOps Channel](/assets/img/posts/Youtube.png)](https://www.youtube.com/@LowOps-Channel)
 
-- <i class="fab fa-youtube"></i> [#01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://www.youtube.com/watch?v=snISTHSQvVc&t=1s)
+## #03 Episodio com Edesan Tomaz: 
+[![#03 Episodio com Edesan Tomaz](https://img.youtube.com/vi/CZTCLSgeRw4/0.jpg)](https://www.youtube.com/watch?v=CZTCLSgeRw4)
 
-- <i class="fab fa-youtube"></i> [#00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://www.youtube.com/watch?v=nlEQ_UMyKew)
+## #02 Episódio com Fabricio Veronez:
+[![#02 Episódio com Fabricio Veronez](https://img.youtube.com/vi/F-dfaVg5Ix8/0.jpg)](https://www.youtube.com/watch?v=F-dfaVg5Ix8)
 
-![Azure Floripa](/assets/img/posts/azurefloripa.png)
-<i class="fab fa-youtube"></i> [Azure Foripa](https://www.youtube.com/@AzureFloripa)
+## #01 Como foi minha primeira KubeCon com Erivaldo Lopes:
+[![#03 Episodio com Edesan Tomaz](https://img.youtube.com/vi/snISTHSQvVc/0.jpg)](https://youtube.com/live/snISTHSQvVc)
 
-- <i class="fab fa-youtube"></i> [Mesa Redonda - Transição de carreira é possível? + Carreira de TI, além da área técnica](https://www.youtube.com/watch?v=6drxvyPhmMc)
+## #00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves:      
+[![#00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://img.youtube.com/vi/nlEQ_UMyKew/0.jpg)](https://www.youtube.com/watch?v=nlEQ_UMyKew)
 
-- <i class="fab fa-youtube"></i> [A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot](https://www.youtube.com/watch?v=X3EV4zdh8BA)
+# Azure Floripa
+[![Azure Floripa](/assets/img/posts/azurefloripa.png)](https://www.youtube.com/@AzureFloripa)
 
-- <i class="fab fa-youtube"></i> [Migrando Logic Apps com Juliano Custodio](https://www.youtube.com/watch?v=YF6yT04eR_s&ab_channel=CloudnaQuebrada%E2%98%81%EF%B8%8F)
+## Mesa Redonda - Transição de carreira é possível? + Carreira de TI, além da área técnica
+[![Mesa Redonda - Transição de carreira é possível? + Carreira de TI, além da área técnica](https://img.youtube.com/vi/6drxvyPhmMc/0.jpg)](https://www.youtube.com/watch?v=6drxvyPhmMc)
 
-- <i class="fab fa-youtube"></i> [Azure OpenAI + Vision Novas Perspectivas com a IA Generativa com Osvaldo Alves](https://www.youtube.com/watch?v=YF6yT04eR_s&ab_channel=CloudnaQuebrada%E2%98%81%EF%B8%8F)
+## #SuperLive Vamos apoiar o Rio Grande do Sul
+[![#SuperLive Vamos apoiar o Rio Grande do Sul](https://img.youtube.com/vi/F-cLo4f3Hew/0.jpg)](https://www.youtube.com/watch?v=F-cLo4f3Hew&ab_channel=AzureFloripa)
 
-- <i class="fab fa-youtube"></i> [Mesa Redonda - Como consegui trabalhar somente com Azure + Certificações](https://www.youtube.com/watch?v=YF6yT04eR_s&ab_channel=CloudnaQuebrada%E2%98%81%EF%B8%8F)
+## A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot
+[![A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot](https://img.youtube.com/vi/X3EV4zdh8BA/0.jpg)](https://www.youtube.com/watch?v=X3EV4zdh8BA)
 
+## Migrando Logic Apps com Juliano Custodio
+[![Migrando Logic Apps com Juliano Custodio](https://img.youtube.com/vi/UhZ6abo-kYk/0.jpg)](https://www.youtube.com/watch?v=UhZ6abo-kYk)
 
+## Azure OpenAI + Vision Novas Perspectivas com a IA Generativa com Osvaldo Alves
+[![Azure OpenAI + Vision Novas Perspectivas com a IA Generativa com Osvaldo Alves](https://img.youtube.com/vi/9QXbtDhygz8/0.jpg)](https://www.youtube.com/watch?v=9QXbtDhygz8&t)
 
+## Mesa Redonda - Como consegui trabalhar somente com Azure + Certificações
+[![Mesa Redonda - Como consegui trabalhar somente com Azure + Certificações](https://img.youtube.com/vi/SEz3UgW3dMM/0.jpg)](https://www.youtube.com/watch?v=SEz3UgW3dMM&t)
