--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -12,6 +12,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify pelo Podcast e 
 ![LowOpsCast](/assets/img/posts/LowOpsCast2.png)
 <i class="fa-brands fa-spotify"></i> [LowOpsCast](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
 
+[![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
+
+
 - <i class="fa-brands fa-spotify"></i> [[AUDIO] #03 Episodio com Edesan Tomaz](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
 
 - <i class="fa-brands fa-spotify"></i> [[AUDIO] #02 Episódio com Fabricio Veronez](https://open.spotify.com/episode/3EuxyLmz28C5iUo7KDMFNU?si=d168171ca35c4cb7)
