--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -15,8 +15,11 @@ Neste blog post, compartilho minha jornada na plataforma Spotify pelo Podcast e 
 ## #03 Episodio com Edesan Tomaz
 [![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
 
-- <i class="fa-brands fa-spotify"></i> [[AUDIO] #02 Episódio com Fabricio Veronez](https://open.spotify.com/episode/3EuxyLmz28C5iUo7KDMFNU?si=d168171ca35c4cb7)
+## #02 Episódio com Fabricio Veronez
+[![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/02.png)](https://open.spotify.com/episode/3EuxyLmz28C5iUo7KDMFNU?si=d168171ca35c4cb7)
 
-- <i class="fa-brands fa-spotify"></i> [[AUDIO] #01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://open.spotify.com/episode/4TYC8bsfDSr4hGbOiKQdL8?si=1f892294af3640e4)
+## #01 Como foi minha primeira KubeCon com Erivaldo Lopes
+[![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/01.png)](https://open.spotify.com/episode/4TYC8bsfDSr4hGbOiKQdL8?si=1f892294af3640e4)
 
-- <i class="fa-brands fa-spotify"></i> [[AUDIO] #00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://open.spotify.com/episode/7Fvfu57ak0I6BeNE5lPr10?si=31adc066093b4f16)
+## #00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves
+[![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/00.jpg)](https://open.spotify.com/episode/7Fvfu57ak0I6BeNE5lPr10?si=31adc066093b4f16)
