--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -9,8 +9,9 @@ tags: [Canais, Spotify]
 
 Neste blog post, compartilho minha jornada na plataforma Spotify pelo Podcast e LowOpsCast. Através desse Podcast, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
 
-![LowOpsCast](/assets/img/posts/LowOpsCast2.png)
-<i class="fa-brands fa-spotify"></i> [LowOpsCast](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
+# LowOpsCast
+
+[![LowOpsCast](/assets/img/posts/LowOpsCast2.png)](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
 
 ## #03 Episodio com Edesan Tomaz
 [![[AUDIO] #03 Episodio com Edesan Tomaz](/assets/img/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
