--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -18,12 +18,21 @@ Se você estiver interessado em saber mais sobre este projeto ou gostaria de se 
 
 - <i class="fa-solid fa-link"></i> **Saiba mais:** [Post Linkedin Mentor](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
 
-- <i class="fab fa-youtube"></i> [DEVOPS - EP 11 - Monitoramento e Observabilidade](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
+## Live de Encerramento da Mentoria 3.0: 
+[![Live de Encerramento da Mentoria 3.0](https://img.youtube.com/vi/x9pifyHOkZI/0.jpg)](https://www.youtube.com/watch?v=x9pifyHOkZI)
 
-- <i class="fab fa-youtube"></i> [DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s&ab_channel=UnicastCloudLab)
+## DEVOPS - EP 11 - Monitoramento e Observabilidade: 
+[![DEVOPS - EP 11 - Monitoramento e Observabilidade](https://img.youtube.com/vi/-rYhXprMJO4/0.jpg)](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
 
-- <i class="fab fa-youtube"></i> [DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins)](https://www.youtube.com/watch?v=42-PW3dVF-Q&t=1s&ab_channel=UnicastCloudLab)
+## DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions: 
+[![DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions](https://img.youtube.com/vi/hxiluSC8E_U/0.jpg)](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s)
 
-- <i class="fab fa-youtube"></i> [DEVOPS - EP 8 - Aprofundando em IaC (Ansible)](https://www.youtube.com/watch?v=ObjlLPkrf1I&ab_channel=UnicastCloudLab)
+## DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins): 
+[![DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins](https://img.youtube.com/vi/42-PW3dVF-Q/0.jpg)](https://www.youtube.com/watch?v=42-PW3dVF-Q&t=1s)
 
-- <i class="fab fa-youtube"></i> [Listão dos Aprovados Mentoria 3.0](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s&ab_channel=CanaldaCloud)
+## DEVOPS - EP 8 - Aprofundando em IaC: 
+[![DEVOPS - EP 8 - Aprofundando em IaC](https://img.youtube.com/vi/ObjlLPkrf1I/0.jpg)](https://www.youtube.com/watch?v=ObjlLPkrf1I&ab_channel=UnicastCloudLab)
+
+## Listão dos Aprovados Mentoria 3.0: 
+[![Listão dos Aprovados Mentoria 3.0](https://img.youtube.com/vi/aCDflhewrhI/0.jpg)](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s)
+
