--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -6,33 +6,33 @@ author: rafaferreira011
 categories: [Voluntariado, Mentoria]
 tags: [Voluntariado, Mentoria]
 ---
+
 *Ago 2023 - Dez 2023*
 
-Estou empolgado para compartilhar minha expetriência como voluntário no Projeto de Mentoria de Carreira do Canal da Cloud. Esta iniciativa, impulsionada pela paixão pela tecnologia, reúne a comunidade técnica de TI para apoiar indivíduos que desejam avançar em suas carreiras na indúsria de tecnologia.
+Estou empolgado para compartilhar minha experiência como voluntário no Projeto de Mentoria de Carreira do Canal da Cloud. Esta iniciativa, impulsionada pela paixão pela tecnologia, reúne a comunidade técnica de TI para apoiar indivíduos que desejam avançar em suas carreiras na indústria de tecnologia.
 
-Como mentor neste projeto, estou dedicado a ajudar pessoas a traçarem caminhos promissores no mundo da tecnologia. Através de orientação personalizada, compartilho conhecimento, dicas e insights sobre as tendências de mercado, capacitando os mentorados a desenvolverem suas habilidades e alcançarem seus objetivos profissionais.
+Como mentor neste projeto, dediquei-me a ajudar pessoas a traçarem caminhos promissores no mundo da tecnologia. Através de orientação personalizada, compartilhei conhecimento, dicas e insights sobre as tendências de mercado, capacitando os mentorados a desenvolverem suas habilidades e alcançarem seus objetivos profissionais.
 
-Acredito firmemente que o acesso à educação e orientação é fundamental para que todos prosperem no cenário tecnológico em constante evolução de hoje. Ao fazer parte do Projeto de Mentoria de Carreira do Cloud Channel, tenho o privilégio de ir além do meu papel profissional e causar um impacto significativo na vida de pessoas que aspiram se destacar no mundo da tecnologia.
+Acredito firmemente que o acesso à educação e orientação é fundamental para que todos prosperem no cenário tecnológico em constante evolução. Ao fazer parte do Projeto de Mentoria de Carreira do Canal da Cloud, tive o privilégio de ir além do meu papel profissional e causar um impacto significativo na vida de pessoas que aspiram se destacar no mundo da tecnologia.
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
 
-- <i class="fa-solid fa-link"></i> **Saiba mais:** [Post Linkedin Mentor](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
+- <i class="fa-solid fa-link"></i> **Saiba mais:** [Post no LinkedIn sobre Mentoria](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
 
-## Live de Encerramento da Mentoria 3.0: 
+## Live de Encerramento da Mentoria 3.0
 [![Live de Encerramento da Mentoria 3.0](https://img.youtube.com/vi/x9pifyHOkZI/0.jpg)](https://www.youtube.com/watch?v=x9pifyHOkZI)
 
-## DEVOPS - EP 11 - Monitoramento e Observabilidade: 
+## DEVOPS - EP 11 - Monitoramento e Observabilidade
 [![DEVOPS - EP 11 - Monitoramento e Observabilidade](https://img.youtube.com/vi/-rYhXprMJO4/0.jpg)](https://www.youtube.com/watch?v=-rYhXprMJO4&ab_channel=UnicastCloudLab)
 
-## DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions: 
+## DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions
 [![DEVOPS - EP 10 - CI/CD com Azure DevOps ou GitHub Actions](https://img.youtube.com/vi/hxiluSC8E_U/0.jpg)](https://www.youtube.com/watch?v=hxiluSC8E_U&t=910s)
 
-## DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins): 
-[![DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins](https://img.youtube.com/vi/42-PW3dVF-Q/0.jpg)](https://www.youtube.com/watch?v=42-PW3dVF-Q&t=1s)
+## DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins)
+[![DEVOPS - EP 9 - Introdução a CI/CD (Pipelines, Jenkins)](https://img.youtube.com/vi/42-PW3dVF-Q/0.jpg)](https://www.youtube.com/watch?v=42-PW3dVF-Q&t=1s)
 
-## DEVOPS - EP 8 - Aprofundando em IaC: 
+## DEVOPS - EP 8 - Aprofundando em IaC
 [![DEVOPS - EP 8 - Aprofundando em IaC](https://img.youtube.com/vi/ObjlLPkrf1I/0.jpg)](https://www.youtube.com/watch?v=ObjlLPkrf1I&ab_channel=UnicastCloudLab)
 
-## Listão dos Aprovados Mentoria 3.0: 
+## Listão dos Aprovados Mentoria 3.0
 [![Listão dos Aprovados Mentoria 3.0](https://img.youtube.com/vi/aCDflhewrhI/0.jpg)](https://www.youtube.com/watch?v=aCDflhewrhI&t=568s)
-
