--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -1,31 +1,32 @@
 ---
 layout: post
-title: "Youtube"
+title: "YouTube"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
 categories: [Canais, Youtube]
 tags: [Canais, Youtube]
 ---
 
-Nesta seção do blog, compartilho minha jornada nas plataforma YouTube pelos os canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre Tecnologia em geral, fortalecendo a comunidade técnica fornecendo o acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
+Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre tecnologia em geral, fortalecendo a comunidade técnica e fornecendo acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
 
 # LowOps Channel
 
 [![LowOps Channel](/assets/img/posts/Youtube.png)](https://www.youtube.com/@LowOps-Channel)
 
-## #03 Episodio com Edesan Tomaz: 
-[![#03 Episodio com Edesan Tomaz](https://img.youtube.com/vi/CZTCLSgeRw4/0.jpg)](https://www.youtube.com/watch?v=CZTCLSgeRw4)
+## #03 Episódio com Edesan Tomaz
+[![#03 Episódio com Edesan Tomaz](https://img.youtube.com/vi/CZTCLSgeRw4/0.jpg)](https://www.youtube.com/watch?v=CZTCLSgeRw4)
 
-## #02 Episódio com Fabricio Veronez:
+## #02 Episódio com Fabricio Veronez
 [![#02 Episódio com Fabricio Veronez](https://img.youtube.com/vi/F-dfaVg5Ix8/0.jpg)](https://www.youtube.com/watch?v=F-dfaVg5Ix8)
 
-## #01 Como foi minha primeira KubeCon com Erivaldo Lopes:
-[![#03 Episodio com Edesan Tomaz](https://img.youtube.com/vi/snISTHSQvVc/0.jpg)](https://youtube.com/live/snISTHSQvVc)
+## #01 Como foi minha primeira KubeCon com Erivaldo Lopes
+[![#01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://img.youtube.com/vi/snISTHSQvVc/0.jpg)](https://youtube.com/live/snISTHSQvVc)
 
-## #00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves:      
+## #00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves
 [![#00 O Poder Das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://img.youtube.com/vi/nlEQ_UMyKew/0.jpg)](https://www.youtube.com/watch?v=nlEQ_UMyKew)
 
 # Azure Floripa
+
 [![Azure Floripa](/assets/img/posts/azurefloripa.png)](https://www.youtube.com/@AzureFloripa)
 
 ## Mesa Redonda - Transição de carreira é possível? + Carreira de TI, além da área técnica
@@ -34,8 +35,8 @@ Nesta seção do blog, compartilho minha jornada nas plataforma YouTube pelos os
 ## #SuperLive Vamos apoiar o Rio Grande do Sul
 [![#SuperLive Vamos apoiar o Rio Grande do Sul](https://img.youtube.com/vi/F-cLo4f3Hew/0.jpg)](https://www.youtube.com/watch?v=F-cLo4f3Hew&ab_channel=AzureFloripa)
 
-## A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot
-[![A importancia de implementar Microsoft Purview para não ter vazamento de dados no Copilot](https://img.youtube.com/vi/X3EV4zdh8BA/0.jpg)](https://www.youtube.com/watch?v=X3EV4zdh8BA)
+## A importância de implementar Microsoft Purview para não ter vazamento de dados no Copilot
+[![A importância de implementar Microsoft Purview para não ter vazamento de dados no Copilot](https://img.youtube.com/vi/X3EV4zdh8BA/0.jpg)](https://www.youtube.com/watch?v=X3EV4zdh8BA)
 
 ## Migrando Logic Apps com Juliano Custodio
 [![Migrando Logic Apps com Juliano Custodio](https://img.youtube.com/vi/UhZ6abo-kYk/0.jpg)](https://www.youtube.com/watch?v=UhZ6abo-kYk)
