--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -3,8 +3,8 @@ layout: post
 title: "Eventos de Tecnologia Presenciais"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Eventos Presenciais, Tecnologia]
-tags: [Eventos, Tecnologia, Presenciais]
+categories: [Eventos Presenciais]
+tags: [Eventos, Presenciais]
 ---
 
 # Minhas Experiências em Eventos de Tecnologia Presenciais
