--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -7,9 +7,7 @@ categories: [Voluntariado, Mentoria]
 tags: [Voluntariado, Mentoria]
 ---
 
-*Ago 2023 - Dez 2023*
-
-Estou empolgado para compartilhar minha experiência como voluntário no Projeto de Mentoria de Carreira do Canal da Cloud. Esta iniciativa, impulsionada pela paixão pela tecnologia, reúne a comunidade técnica de TI para apoiar indivíduos que desejam avançar em suas carreiras na indústria de tecnologia.
+Estou empolgado para compartilhar minha experiência como voluntário no Projeto de Mentoria de Carreira do Canal da Cloud durante o período de Agosto de 2023 a Dezembro de 2023. Esta iniciativa, impulsionada pela paixão pela tecnologia, reúne a comunidade técnica de TI para apoiar indivíduos que desejam avançar em suas carreiras na indústria de tecnologia.
 
 Como mentor neste projeto, dediquei-me a ajudar pessoas a traçarem caminhos promissores no mundo da tecnologia. Através de orientação personalizada, compartilhei conhecimento, dicas e insights sobre as tendências de mercado, capacitando os mentorados a desenvolverem suas habilidades e alcançarem seus objetivos profissionais.
 
