--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -14,6 +14,7 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 ## Eventos Recentes
 
 ### 2024
+- <i class="fa-solid fa-link"></i> [Maio - 5º Cloud Native Santa Catarina Edição Especial Floripa](https://community.cncf.io/events/details/cncf-cloud-native-santa-catarina-presents-5o-cloud-native-santa-catarina-edicao-especial-floripa/)
 - <i class="fa-solid fa-link"></i> [Maio - Immersion Day AWS e NTT DATA](https://www.sympla.com.br/evento/immersion-day-aws-e-ntt-data/2398471)
 - <i class="fa-solid fa-link"></i> [Março - 1º Meetup 2024 - Infosec Floripa](https://www.eventbrite.com/e/1o-meetup-2024-infosec-floripa-tickets-860860014477)
 - <i class="fa-solid fa-link"></i> [Março - Florianópolis - Meetup Codecon - #02](https://eventos.codecon.dev/meetup-codecon-fln-02/)
