--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -13,21 +13,21 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ## LowOpsCast
 
-[![LowOpsCast](/assets/img/posts/LowOpsCast.png)](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
+[![LowOpsCast](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/LowOpsCast.png)](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
 
 ### Episódios Destacados
 
 #### #03 Episodio com Edesan Tomaz
-[![#03 Episodio com Edesan Tomaz](/assets/img/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
+[![#03 Episodio com Edesan Tomaz](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
 
 #### #02 Episódio com Fabricio Veronez
-[![#02 Episódio com Fabricio Veronez](/assets/img/spotify/02.png)](https://open.spotify.com/episode/3EuxyLmz28C5iUo7KDMFNU?si=d168171ca35c4cb7)
+[![#02 Episódio com Fabricio Veronez](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/02.png)](https://open.spotify.com/episode/3EuxyLmz28C5iUo7KDMFNU?si=d168171ca35c4cb7)
 
 #### #01 Como foi minha primeira KubeCon com Erivaldo Lopes
-[![#01 Como foi minha primeira KubeCon com Erivaldo Lopes](/assets/img/spotify/01.png)](https://open.spotify.com/episode/4TYC8bsfDSr4hGbOiKQdL8?si=1f892294af3640e4)
+[![#01 Como foi minha primeira KubeCon com Erivaldo Lopes](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/01.png)](https://open.spotify.com/episode/4TYC8bsfDSr4hGbOiKQdL8?si=1f892294af3640e4)
 
 #### #00 O Poder das Comunidades com Claudio Raposo e Marcelo Gonçalves
-[![#00 O Poder das Comunidades com Claudio Raposo e Marcelo Gonçalves](/assets/img/spotify/00.jpg)](https://open.spotify.com/episode/7Fvfu57ak0I6BeNE5lPr10?si=31adc066093b4f16)
+[![#00 O Poder das Comunidades com Claudio Raposo e Marcelo Gonçalves](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/00.jpg)](https://open.spotify.com/episode/7Fvfu57ak0I6BeNE5lPr10?si=31adc066093b4f16)
 
 ---
 
