--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #04 Episodio com Rodrigo Paliosa
+[![#04 Episodio com Rodrigo Paliosa](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/04.png)](https://open.spotify.com/episode/7ixUPv4Nu3u0KaxFre3vUg?si=a38678cad63844df2)
+
 #### #03 Episodio com Edesan Tomaz
 [![#03 Episodio com Edesan Tomaz](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/03.png)](https://open.spotify.com/episode/1OstMPDeB0R7eHvgL0Oui9?si=663c456c04284492)
 
