--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -17,6 +17,12 @@ Durante o curso, abordamos tópicos cruciais como os modelos de serviço (IaaS, 
 
 Agradecemos a todos os participantes por tornarem este evento memorável. Estamos ansiosos para vê-los avançar em suas carreiras de TI e explorar novas certificações no ecossistema do Azure.
 
+- <i class="fa-solid fa-link"></i> **Saiba mais:** [AZ-900 - Fundamentos da Azure](https://www.eventbrite.com.br/e/az-900-tickets-885187528727)
+
+- <i class="fa-solid fa-link"></i> [**Post Linkedin**](https://www.linkedin.com/posts/rafaelmaferreira_ai900-fundamentos-az900-activity-7205901535577300992-nB1S?utm_source=share&utm_medium=member_desktop)
+
+- <i class="fa-regular fa-folder-open"></i> **Slides da Apresentação:** Utilizado Material Oficial da Microsoft fornecido para MCT's.
+
 Até o próximo evento!
 Spoilers: Será o #AI900 #Fundamentos de IA do Azure
 
