update icon linkedin

--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -15,7 +15,7 @@ Acredito firmemente que o acesso à educação e orientação é fundamental par
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
 
-- <i class="fa-solid fa-link"></i> **Saiba mais:** [Post no LinkedIn sobre Mentoria](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
+- <i class="fa-brands fa-linkedin"></i> **Saiba mais:** [Post no LinkedIn sobre Mentoria](https://www.linkedin.com/posts/rafaelmaferreira_devops-mentoria-canaldacloud-activity-7095080582841327616--vqv?utm_source=share&utm_medium=member_desktop)
 
 ## Live de Encerramento da Mentoria 3.0
 [![Live de Encerramento da Mentoria 3.0](https://img.youtube.com/vi/x9pifyHOkZI/0.jpg)](https://www.youtube.com/watch?v=x9pifyHOkZI)
