--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "Eventos de Tecnologia Presenciais"
+title: "Listagem dos Eventos de Tecnologia Presenciais"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Eventos Presenciais]
+categories: [Eventos Presenciais, Listagem]
 tags: [Eventos, Presenciais]
 ---
 
@@ -14,6 +14,9 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 ## Eventos Recentes
 
 ### 2024
+- <i class="fa-solid fa-link"></i> [Junho - https://thedevconf.com/tdc/2024/florianopolis/](https://thedevconf.com/tdc/2024/florianopolis/)
+- <i class="fa-solid fa-link"></i> [Junho - 6º KuberTENes Birthday Bash Santa Catarina](https://community.cncf.io/events/details/cncf-cloud-native-santa-catarina-presents-6o-kubertenes-birthday-bash-santa-catarina/)
+- <i class="fa-solid fa-link"></i> [Junho - Tech Connection Balneário Camburiú](https://talkfloripa.com.br/grade)
 - <i class="fa-solid fa-link"></i> [Maio - 5º Cloud Native Santa Catarina Edição Especial Floripa](https://community.cncf.io/events/details/cncf-cloud-native-santa-catarina-presents-5o-cloud-native-santa-catarina-edicao-especial-floripa/)
 - <i class="fa-solid fa-link"></i> [Maio - Immersion Day AWS e NTT DATA](https://www.sympla.com.br/evento/immersion-day-aws-e-ntt-data/2398471)
 - <i class="fa-solid fa-link"></i> [Março - 1º Meetup 2024 - Infosec Floripa](https://www.eventbrite.com/e/1o-meetup-2024-infosec-floripa-tickets-860860014477)
