--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -14,7 +14,8 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 ## Eventos Recentes
 
 ### 2024
-- <i class="fa-solid fa-link"></i> [Junho - https://thedevconf.com/tdc/2024/florianopolis/](https://thedevconf.com/tdc/2024/florianopolis/)
+- <i class="fa-solid fa-link"></i> [Junho - TDC - Trilha DevOps e SRE](https://thedevconf.com/tdc/2024/florianopolis/trilha-devops-e-sre)
+- <i class="fa-solid fa-link"></i> [Junho - TDC - Trilha Cloud](https://thedevconf.com/tdc/2024/florianopolis/trilha-cloud)
 - <i class="fa-solid fa-link"></i> [Junho - 6º KuberTENes Birthday Bash Santa Catarina](https://community.cncf.io/events/details/cncf-cloud-native-santa-catarina-presents-6o-kubertenes-birthday-bash-santa-catarina/)
 - <i class="fa-solid fa-link"></i> [Junho - Tech Connection Balneário Camburiú](https://talkfloripa.com.br/grade)
 - <i class="fa-solid fa-link"></i> [Maio - 5º Cloud Native Santa Catarina Edição Especial Floripa](https://community.cncf.io/events/details/cncf-cloud-native-santa-catarina-presents-5o-cloud-native-santa-catarina-edicao-especial-floripa/)
